--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = {version="1.0", features=["rc"]}
+serde_derive = "1.0"
+serde_json = "1.0"
+
+num-traits = "0.2.15"
+# num-derive = "0.3.3"
+
 rand = "0.8"
 getrandom = { version = "0.2", features = ["js"] }
+# statrs = "0.15.0"
 
 yew = "0.19"
+gloo-storage = "0.2.1"
